<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_text_title"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/edit_text_description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/spinnerDayOfWeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/day_of_week"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

            <RadioGroup
                android:id="@+id/RadioGroupPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDayOfWeek">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/priority_1"
                    android:textColor="#212121" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/priority_2" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_light"
                    android:checked="true"
                    android:text="@string/priority_3" />
            </RadioGroup>


            <Button
                android:id="@+id/buttonSaveNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:text="@string/save_note"
                android:onClick="onClickSaveNote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RadioGroupPriority" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>